<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="170dp"
        android:background="#46A287"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:background="#00EFE7E7"
            android:ems="10"
            android:fontFamily="@font/alexandria_extrabold"
            android:minHeight="48dp"
            android:text="@string/notas_2025"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/etTema"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_tema"
            android:ems="10"
            android:hint="@string/escribe_un_tema"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="#595555"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etDescripcion"
            android:layout_width="match_parent"
            android:layout_height="245dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:autofillHints=""
            android:background="@drawable/edit_tema"
            android:gravity="top|start"
            android:hint="@string/comenta_el_tema"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textColorHint="#474545"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tvRespuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_tema"
                android:padding="8dp"
                android:text="@string/respuestas"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal|bold|italic" />
        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="255dp"
        android:background="#64ABCE"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btSalir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#1B1A1A"
            android:text="@string/salir"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@drawable/ic_salir"
            app:iconSize="30dp"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:background="#00EFE7E7"
            android:ems="10"
            android:fontFamily="@font/alexandria_extrabold"
            android:minHeight="48dp"
            android:text="@string/crud_2025"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/etId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:autofillHints=""
            android:background="@drawable/edit_tema"
            android:ems="10"
            android:hint="@string/id"
            android:inputType="text"
            android:minHeight="48dp"
            android:textAlignment="center"
            android:textColor="#0D0D0D"
            android:textColorHint="#4D4848"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#1866D0"
            android:text="@string/guardar"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@drawable/ic_guardar"
            app:iconSize="20dp"
            app:iconTint="#FAFAFA"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btnExpandir"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#76070707"
            android:gravity="center"
            android:text="@string/expandir"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:icon="@drawable/ic_expamdir"
            app:iconTint="#FBFAFA"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btModificar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#43B413"
            android:minHeight="48dp"
            android:text="@string/editar"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_modificar"
            app:iconSize="25dp"
            app:iconTint="#FFFFFF"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#D95E20"
            android:text="@string/listado"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:icon="@drawable/ic_consultar"
            app:iconSize="25dp"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/btBuscarID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="#5C5F5B"
            android:minHeight="48dp"
            android:text="@string/buscar"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:icon="@drawable/ic_buscar"
            android:textStyle="bold"
            app:iconSize="25dp"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/btLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/limpiar"
            android:textStyle="bold"
            android:backgroundTint="#F6F6F6"
            android:minHeight="48dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:icon="@drawable/ic_limpiar"
            app:iconTint="#090909"
            app:iconSize="25dp"/>


        <Button
            android:id="@+id/btEliminar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:backgroundTint="#C32424"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/eliminar"
            android:textStyle="bold"
            app:icon="@drawable/ic_eliminar"
            app:iconSize="25dp"
            app:iconTint="@color/white"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>